syntax = "proto2";
package protobuf;

option java_package = "com.fcjexample.demo.test.protobuf";
option java_outer_classname = "AddressBookProtos";

message Person {
  required string name = 1;
  required int32 id = 2;
  optional string email = 3;

  repeated string numbers = 4;
}

message AddressBook {
  optional string ha = 3; // test
  repeated Person people = 1;
}