syntax = "proto2";

option java_package = "com.fcjexample.demo.test.protobuf";
option java_outer_classname = "ZDProtobufClass";

message DV_ZD_V3 {
    optional	string	event_name	=	1;	//	事件名
    optional	int32	type	=	2;	//	0:自动	1:手动
    optional	string	source	=	3;	//	a/i/aj/ij	a表示nativeAndroid，i表示nativeiOS，aj表示js调用Android，ij表示js调用iOS
    optional	int32	ptt	=	4;	//	uint32取	uint32	随机数，设置种子为当前时间戳(毫秒)
    optional	int32	index	=	5;	//	埋点的索引
    optional	int32	page_index	=	6;	//	页面索引
    optional	string	page_name	=	7;	//
    optional	string	page_title	=	8;	//
    optional	string	pre_page_name	=	9;	//
    optional	string	pre_page_title	=	10;	//
    optional	uint64	stt	=	11;	//	server	time
    optional	string	web_page_url	=	12;	//
    optional	string	web_page_title	=	13;	//
    optional	string	web_req_uri	=	14;	//
    optional	string	web_req_mothed	=	15;	//
    optional	int32	click_x	=	16;	//	点击X坐标
    optional	int32	click_y	=	17;	//	点击坐标
    optional	string	web_winsize	=	18;	//
    optional	int32	net_status	=	19;	//	NT	net	type
    optional	int32	pre_net_status	=	20;	//	NT	pre	net	type
    optional	string	txt_input_target	=	21;	//	输入框的target，当本次点击与上次不同则重新传输
    optional	int32	txt_len	=	22;	//	当前输入框内容长度
    optional	string	tc_info	=	23;	//	touch	信息
    optional	bool	blue_status	=	24;	//
    optional	uint64	app_duration	=	25;	//
    optional	uint64	page_duration	=	26;	//
    optional	string	u1	=	27;	//	ack
    optional	string	v1	=	28;	//	DVID
    optional	string	v2	=	29;	//	token
    optional	string	d78	=	30;	//	uuid
    optional	string	d15	=	31;	//	os
    optional	int32	d39	=	32;	//	电量
    optional	int32	d601	=	33;	//	剩余可用内存
    optional	string	d29	=	34;	//	SSID
    optional	bool	d54	=	35;	//	USB
    optional	string	n1	=	36;	//	内网	IP
    optional	string	n4	=	37;	//	网关	IP
    optional	float	d33	=	38;	//	屏幕亮度
    optional	string	d24	=	39;	//	音量
    optional	int32	d40	=	40;	//	充电状态,	empty	=	-1
    optional	int32	d51	=	41;	//	SIM	状态
    optional	string	a2	=	42;	//	package
    optional	uint64	a9	=	43;	//	当前	APP	安装时间
    optional	string	d76	=	44;	//	分辨率
    optional	bool	d602	=	45;	//	省电模式
    optional	uint64	d8	=	46;	//	磁盘可用空间
    optional	int32	d603	=	47;	//	wifi/4G/5G	信号强度 0-4，越大越强
    optional	int32	c1	=	48;	//	root
    optional	int32	c3	=	49;	//	hook
    optional	int32	c10	=	50;	//	emulator
    optional	bool	c8	=	51;	//	debug
    optional	bool	c9	=	52;	//	MultRun
    optional	int32	c201	=	53;	//	root
    optional	int32	c203	=	54;	//	hook
    optional	bool	c208	=	55;	//	debug
    optional	bool	d44	=	56;	//	VPN
    optional	string	d16	=	57;	//	系统版本
    optional	string	d42	=	58;	//	手机品牌
    optional	uint64	d94	=	59;	//	本地时间戳
    optional	uint64	d604	=	60;	//	重力加速度
    optional	uint64	d605	=	61;	//	温度传感器
    optional	string	d61	=	62;	//	附件wifi信息
    optional	string	u	=	63;	//	用户传入字段
    optional	string	j1	=	64;	//	UA
    optional	string	j2	=	65;	//	plugins
    optional	string	j5	=	66;	//	screenWidth
    optional	string	j6	=	67;	//	screenHeight
    optional	int32	j7	=	68;	//	colorDepth
    optional	string	j10	=	69;	//	language
    optional	string	j11	=	70;	//	languages
    optional	string	j12	=	71;	//	platform
    optional	string	j15	=	72;	//	timezone
    optional	string	j16	=	73;	//	localTime
    optional	bool	j17	=	74;	//	flash
    optional	bool	j18	=	75;	//	cookie
    optional	bool	j36	=	76;	//	use indexedDB
    optional	bool	j37	=	77;	//	use sessionStorage
    optional	bool	j38	=	78;	//	use localStorage
    optional	int32	j39	=	79;	//	hardwareConcurrency
    optional	string	j40	=	80;	//	navigator.cpuClass
    optional	int32	j41	=	81;	//	navigator.deviceMemory
    optional	int32	j42	=	82;	//	window.devicePixelRatio
    optional	int32	j43	=	83;	//	availHeight
    optional	int32	j44	=	84;	//	availWidth
    optional	int32	j45	=	85;	//	availTop
    optional	int32	j46	=	86;	//	availLeft
    optional	bool	j51	=	87;	//	JavaEabled
    optional	bool	j52	=	88;	//	DoNotTrack
    optional	bool	j53	=	89;	//	TouchSupport
    optional	bool	j54	=	90;	//	AdBlock
    optional	bool	j55	=	91;	//	isIE
    optional	bool	j56	=	92;	//	hasSwfObjectLoaded
    optional	bool	j57	=	93;	//	getHasLiedLanguages
    optional	bool	j58	=	94;	//	getHasLiedScreen
    optional	bool	j59	=	95;	//	getHasLiedOs
    optional	bool	j60	=	96;	//	getHasLiedBrowser
    optional	string	j61	=	97;	//	getWebglVendorAndRender
    optional	string	j62	=	98;	//	uuid
    optional	string	j63	=	99;	//	whole connection
    optional	string	j64	=	100;	//	os info
    optional	string	j70	=	101;	//	localDescription in webRTC
    optional	string	j71	=	102;	//	iceCandidate in webRTC
    optional	string	j73	=	103;	//	Screen Resolution
    optional	string	j50	=	104;	//	电量信息
    optional	string	ud	=	105;	//	用户数据
}